unpackaged/main/default/objects/Traveler__c/Traveler__c.object-meta.xml
<CustomObject>
    <label>Traveler</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Traveler Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travelers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>