unpackaged/main/default/objects/Traveler__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <formula>Traveler__r.Additional_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Information</label>
    <type>Text</type>
</CustomField>