unpackaged/main/default/objects/Traveler__c/fields/Assigned_Airplane__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Airplane__c</fullName>
    <description>The assigned airplane number or license number or any bus details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Airplane</label>
    <length>20</length>
    <type>Text</type>
</CustomField>