unpackaged/main/default/objects/Traveler__c/fields/Assigned_Bus__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Bus__c</fullName>
    <description>The assigned bus number or license number or any bus details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Bus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>