unpackaged/main/default/objects/Traveler__c/fields/Covid_19_Result__c.field-meta.xml
<CustomField>
    <fullName>Covid_19_Result__c</fullName>
    <description>The traveler&#39;s covid-19 test results</description>
    <label>Covid-19 Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test not taken</fullName>
                <default>true</default>
                <label>Test not taken</label>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Awaiting Result</fullName>
            </value>
            <value>
                <fullName>Family Member Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>