unpackaged/main/default/objects/Traveler__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <formula>TEXT(Mission__r.Destination__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination</label>
    <type>Text</type>
</CustomField>