unpackaged/main/default/objects/Traveler__c/fields/Family_Group__c.field-meta.xml
<CustomField>
    <fullName>Family_Group__c</fullName>
    <formula>Traveler__r.Family_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CARE Number</label>
    <type>Text</type>
</CustomField>