unpackaged/main/default/objects/Traveler__c/fields/Islamabad_Aviation__c.field-meta.xml
<CustomField>
    <fullName>Islamabad_Aviation__c</fullName>
    <description>Used only for Path settings</description>
    <label>Islamabad Aviation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No contact made</fullName>
            </value>
            <value>
                <fullName>Initial contact made</fullName>
            </value>
            <value>
                <fullName>Pakistan Entry Stamp Received</fullName>
            </value>
            <value>
                <fullName>Pakistan Visa Received</fullName>
            </value>
            <value>
                <fullName>Pakistan Exit Visa Applied For</fullName>
            </value>
            <value>
                <fullName>Pakistan Exit Visa Received</fullName>
            </value>
            <value>
                <fullName>Covid Test Received</fullName>
            </value>
            <value>
                <fullName>Arrived at the Airport</fullName>
            </value>
            <value>
                <fullName>Ticket Provided to Passenger</fullName>
            </value>
            <value>
                <fullName>Qatar Visa Collected</fullName>
            </value>
            <value>
                <fullName>Cleared Immigration</fullName>
            </value>
            <value>
                <fullName>Boarded Plane</fullName>
            </value>
            <value>
                <fullName>Arrived at RCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>