unpackaged/main/default/objects/Traveler__c/fields/Mission__c.field-meta.xml
<CustomField>
    <fullName>Mission__c</fullName>
    <description>Master-Detail to the mission that the traveler is on</description>
    <label>Mission</label>
    <referenceTo>Mission__c</referenceTo>
    <relationshipName>Travelers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>