unpackaged/main/default/objects/Traveler__c/fields/Mission_Codename__c.field-meta.xml
<CustomField>
    <fullName>Mission_Codename__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Codename from the related mission</inlineHelpText>
    <label>Mission Codename</label>
    <length>64</length>
    <type>Text</type>
</CustomField>