unpackaged/main/default/objects/Traveler__c/fields/Mission_Name__c.field-meta.xml
<CustomField>
    <fullName>Mission_Name__c</fullName>
    <formula>Mission__r.Codename__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mission Name</label>
    <type>Text</type>
</CustomField>