unpackaged/main/default/objects/Traveler__c/fields/National_ID__c.field-meta.xml
<CustomField>
    <fullName>National_ID__c</fullName>
    <description>National ID fetched from contact</description>
    <formula>Traveler__r.National_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National ID</label>
    <type>Text</type>
</CustomField>