unpackaged/main/default/objects/Traveler__c/fields/Number_of_Family_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Family_Members__c</fullName>
    <formula>Traveler__r.Number_of_Family_Members__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Family Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>