unpackaged/main/default/objects/Traveler__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <description>Passport Number fetched from the contact</description>
    <formula>Traveler__r.Passport_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passport Number</label>
    <type>Text</type>
</CustomField>