unpackaged/main/default/objects/Traveler__c/fields/Principal_Applicant_or_Family_Member__c.field-meta.xml
<CustomField>
    <fullName>Principal_Applicant_or_Family_Member__c</fullName>
    <formula>TEXT(Traveler__r.Principal_Applicant_or_Family_Member__c)</formula>
    <label>Principal Applicant or Family Member</label>
    <type>Text</type>
</CustomField>