unpackaged/main/default/objects/Traveler__c/fields/Referred_To__c.field-meta.xml
<CustomField>
    <fullName>Referred_To__c</fullName>
    <formula>TEXT(Traveler__r.Referred_To__c)</formula>
    <label>Referred To</label>
    <type>Text</type>
</CustomField>