unpackaged/main/default/objects/Traveler__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The principal applicant that the traveler is related to</description>
    <label>Related To</label>
    <referenceTo>Traveler__c</referenceTo>
    <relationshipLabel>Principal Applicant</relationshipLabel>
    <relationshipName>Related</relationshipName>
    <type>Lookup</type>
</CustomField>