unpackaged/main/default/objects/Traveler__c/fields/Related_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Name__c</fullName>
    <formula>Related_To__r.Traveler_Name__c</formula>
    <label>Related To Name</label>
    <type>Text</type>
</CustomField>