unpackaged/main/default/objects/Traveler__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>