unpackaged/main/default/objects/Traveler__c/fields/Relocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Status__c</fullName>
    <label>Relocation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No contact made</fullName>
            </value>
            <value>
                <fullName>Initial contact made</fullName>
            </value>
            <value>
                <fullName>Pick Up Details Confirmed</fullName>
            </value>
            <value>
                <fullName>Logged onto the bus</fullName>
            </value>
            <value>
                <fullName>Initial Biometric Capture</fullName>
            </value>
            <value>
                <fullName>Complete biometrics captured</fullName>
            </value>
            <value>
                <fullName>Successful Border Crossing</fullName>
            </value>
            <value>
                <fullName>Arrived at Third Country</fullName>
            </value>
            <value>
                <fullName>Passport Collected</fullName>
            </value>
            <value>
                <fullName>Passport Delivered to Qatar Embassy</fullName>
            </value>
            <value>
                <fullName>Passport Returned from Embassy</fullName>
            </value>
            <value>
                <fullName>Qatar Visa Received</fullName>
            </value>
            <value>
                <fullName>Pakistan Entry Stamp Received</fullName>
            </value>
            <value>
                <fullName>Pakistan Visa Received</fullName>
            </value>
            <value>
                <fullName>Pakistan Exit Visa Applied For</fullName>
            </value>
            <value>
                <fullName>Pakistan Exit Visa Received</fullName>
            </value>
            <value>
                <fullName>Covid Test Received</fullName>
            </value>
            <value>
                <fullName>Airline Ticket Issued</fullName>
            </value>
            <value>
                <fullName>Passport &amp; Documents Collected from SEPAR</fullName>
            </value>
            <value>
                <fullName>Arrived at the Airport</fullName>
            </value>
            <value>
                <fullName>Ticket Provided to Passenger</fullName>
            </value>
            <value>
                <fullName>Qatar Visa Collected</fullName>
            </value>
            <value>
                <fullName>Cleared Immigration</fullName>
            </value>
            <value>
                <fullName>Arrived at Border</fullName>
            </value>
            <value>
                <fullName>Ticketed</fullName>
            </value>
            <value>
                <fullName>Boarded Plane</fullName>
            </value>
            <value>
                <fullName>Arrival in the RRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>