unpackaged/main/default/objects/Traveler__c/fields/Search_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Search Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>