unpackaged/main/default/objects/Traveler__c/fields/Search_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Search_Passport_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Search Passport Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>