unpackaged/main/default/objects/Traveler__c/fields/Traveler__c.field-meta.xml
<CustomField>
    <fullName>Traveler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Traveler</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Travelers</relationshipName>
    <type>Lookup</type>
</CustomField>