unpackaged/main/default/objects/Traveler__c/fields/Traveler_Name__c.field-meta.xml
<CustomField>
    <fullName>Traveler_Name__c</fullName>
    <description>The Traveler&#39;s Full Name</description>
    <formula>Traveler__r.LastName + &#39; &#39; +  Traveler__r.FirstName</formula>
    <label>Traveler Name</label>
    <type>Text</type>
</CustomField>