unpackaged/main/default/objects/Traveler__c/fields/Vaccination_Status__c.field-meta.xml
<CustomField>
    <fullName>Vaccination_Status__c</fullName>
    <formula>CASE( Covid_19_Result__c,
&quot;Negative&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;),
&quot;Positive&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;),
&quot;Family Member Positive&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;),
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;)
)</formula>
    <label>Vaccination Status</label>
    <type>Text</type>
</CustomField>