unpackaged/main/default/objects/Traveler__c/recordTypes/Islamabad_Aviation.recordType-meta.xml
<RecordType>
    <fullName>Islamabad_Aviation</fullName>
    <active>true</active>
    <label>Islamabad Aviation</label>
</RecordType>