unpackaged/main/default/objects/Traveler__c/recordTypes/Kabul_Aviation.recordType-meta.xml
<RecordType>
    <fullName>Kabul_Aviation</fullName>
    <active>true</active>
    <label>Kabul Aviation</label>
</RecordType>