unpackaged/main/default/objects/Traveler__c/recordTypes/Overland.recordType-meta.xml
<RecordType>
    <fullName>Overland</fullName>
    <active>true</active>
    <label>Overland</label>
</RecordType>