unpackaged/main/default/objects/Traveler__c/listViews/All_Travelers.listView-meta.xml
<ListView>
    <fullName>All_Travelers</fullName>
    <columns>NAME</columns>
    <columns>Traveler__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Travelers</label>
</ListView>